# anode

./: .gitignore  Cargo.toml  README.md
.github/workflows/: frontend.yml  node.js.yml  npm.yml  rust.yml
frontend/: package-lock.json  package.json
frontend/src/: .babelrc  _index.js  index.html  index.js  server.js
frontend/src/api/: signallingApiV1.js
frontend/src/css/: main.css
frontend/src/data/: data.js
frontend/src/media/: stream.js  stream.test.js  user.js  video.js
frontend/src/network/: ajax.js  rtc.js  sdp.js  signaling.js  signalling.js  socket.js  socket.test.js  webrtc.js  webrtc.test.js
frontend/src/ui/: ui.js
src/: main.rs
src/api/: message.rs
