[package]
name = "anode"
version = "0.1.0"
authors = ["::::::::::::::: <sergystepanov@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
log = "0.4.11"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"
