[package]
name = "anode"
version = "0.1.0"
authors = ["::::::::::::::: <sergystepanov@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"

rand = "0.7"
byteorder = "1.3"
awc = "2"
futures = "0.3.1"
bytes = "0.5.3"

log = "0.4.11"
env_logger = "0.7"
