[package]
name = "anode"
version = "0.1.0"
authors = ["::::::::::::::: <sergystepanov@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.3"
actix-rt = "1.1.1"
actix-web = "3.1.0"
actix-ws = "0.1.0"

anyhow = "1.0"
awc = "2"
bytes = "0.5.3"
byteorder = "1.3"
futures = "0.3.1"
rand = "0.7"

log = "0.4.11"
pretty_env_logger = "0.4"
